add card services and banner brands

--- a/src/components/home/CarouselProducts.astro
+++ b/src/components/home/CarouselProducts.astro
@@ -1,6 +1,6 @@
 ---
 import Title from "../ui/Title.astro";
-import CardProduct from "../ui/CardProduct.astro";
+import CardService from "../ui/CardService.astro";
 import Button from "../ui/Button.astro";
 ---
 
@@ -8,9 +8,9 @@ import Button from "../ui/Button.astro";
   <Title title="Busca y encuentra">tus productos</Title>
 
   <div class="card-list">
-    <CardProduct />
-    <CardProduct />
-    <CardProduct />
+    <CardService />
+    <CardService />
+    <CardService />
   </div>
 
   <div class="item-button">
