--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -4,7 +4,7 @@ const h3 = ["mb-4 font-semibold relative w-max uppercase"];
 ---
 
 <footer
-  class="bg-gradient-to-b from-secondary-color-950 to-secondary-color-800"
+  class="bg-gradient-to-b from-secondary-color-950 to-secondary-color-800 text-white"
 >
   <section class="py-10 px-6">
     <section>
