--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,9 +1,14 @@
 ---
+import { Banner } from "../components";
 
 ---
+
 <header>
-  <h2>Header</h2>
+  <section></section>
+  <figure>
+    <img src="logo-air-servitec.png" alt="" />
+  </figure>
+  <Banner/>
 </header>
 
-<style lang="scss">
-</style>
+<style lang="scss"></style>
