--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,14 +1,13 @@
 ---
 import { Banner } from "../components";
-
+import NavBar from "../components/home/NavBar.astro";
 ---
 
-<header>
-  <section></section>
-  <figure>
+<header class="h-20 flex justify-between items-center px-6 shadow-lg">
+  <figure class="w-44">
     <img src="logo-air-servitec.png" alt="" />
   </figure>
-  <Banner/>
+  <NavBar />
 </header>
 
 <style lang="scss"></style>
