--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,13 @@
 ---
-import { BannerBrands, CardService, Title } from "../components";
+import { Banner, BannerBrands, CardService, Title } from "../components";
 import { BaseLayout } from "../layouts";
 import { services } from "../data-list/services.js";
 ---
 
 <BaseLayout title="Servitec linea blanca">
   <main class="">
-    <BannerMarcas />
+    <Banner/>
+    <BannerBrands />
     <section class="px-6 py-20">
       <Title title="Nuestros Servicios" />
       <section class="grid md:grid-cols-3 gap-6">
