--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,7 @@ import Footer from "./Footer.astro";
 import Header from "./Header.astro";
 
 interface Props {
-  title: string;
+  title?: string;
 }
 
 const { title } = Astro.props;
@@ -22,7 +22,7 @@ const { title } = Astro.props;
     <ViewTransitions />
   </head>
   <body>
-    <div class="container mx-auto">
+    <div class="w-full max-w-7xl mx-auto">
       <Header />
       <div>
         <slot />
@@ -32,7 +32,7 @@ const { title } = Astro.props;
     <style is:global lang="scss">
       html {
         font-family: system-ui, sans-serif;
-        color-scheme: dark light;
+        color-scheme: light;
       }
 
       .color {
