--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -10,7 +10,7 @@ const h3 = ["mb-4 font-semibold relative w-max uppercase"];
     <section>
       <figure class="mb-8">
         <img
-          src="logo-air-servitec.png"
+          src="/logo-air-servitec.png"
           alt="Logo Air Servitec"
           class="w-full md:w-72"
         />
