--- a/src/components/home/Banner.astro
+++ b/src/components/home/Banner.astro
@@ -2,13 +2,13 @@
 import { Button, Title } from "../../components";
 ---
 
-<section class="w-full h-72 md:h-98 bg-[url('fondo-banner.jpg')] flex bg-cover px-6">
+<section class="w-full h-72 md:h-98 bg-[url('/fondo-banner.jpg')] flex bg-cover px-6">
   <section>
     <h1 class="mt-16 text-xl md:text-4xl lg:text-5xl text-white">Servicio Técnico de Electrodomésticos</h1>
     <Button>Contáctanos</Button>
   </section>
   <figure class="w-100 self-end md:self-center ml-auto">
-    <img src="producto-banner.png" alt="" />
+    <img src="/producto-banner.png" alt="" />
   </figure>
 </section>
 
