--- a/src/components/home/BannerBrands.astro
+++ b/src/components/home/BannerBrands.astro
@@ -16,7 +16,7 @@ const logos = [
       return (
         <figure class="w-24 flex flex-col justify-center">
           <img
-            src={`logo-${logo}.webp`}
+            src={`/logo-${logo}.webp`}
             alt={`Logo de la marca ${logo}`}
           />
         </figure>
