--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
     <ViewTransitions />
   </head>
   <body>
-    <div class="w-full max-w-7xl mx-auto">
+    <div class="w-full max-w-7xl mx-auto overflow-hidden">
       <Header />
       <div>
         <slot />
