--- a/src/components/home/BannerBrands.astro
+++ b/src/components/home/BannerBrands.astro
@@ -10,7 +10,7 @@ const logos = [
 ];
 ---
 
-<section class="flex flex-wrap gap-4 bg-primary-color-500 justify-evenly align-middle p-6 md:p-0 md:py-6">
+<section class="flex flex-wrap gap-4 overflow-x-auto bg-primary-color-500 justify-evenly items-center p-6 md:p-0 md:py-6">
   {
     logos.map((logo) => {
       return (
