--- a/src/components/home/NavBar.astro
+++ b/src/components/home/NavBar.astro
@@ -7,34 +7,39 @@
     <li class="text-center w-36">
       <a class="w-full block" href="/">Inicio</a>
     </li>
-    <li class="relative group text-center w-36">
+    <li class="transition duration-100 relative group text-center w-36">
       <span class="w-full block cursor-pointer">Servicios</span>
       <ul
-        class="absolute hidden -bottom-[19rem] group-hover:flex group-active:flex flex-col gap-2 p-2 rounded-md w-full bg-white z-50"
+        class="transition absolute hidden -bottom-[19rem] group-hover:flex group-active:flex flex-col gap-2 p-2 rounded-md w-full bg-white z-50"
       >
         <li class="text-left">
           <a
             class="flex text-xs p-2"
-            href="/services/reparacion-electrica-de-cocina"
-            >Reparación eléctrica de cocina</a>
+            href="/services/reparacion-de-cocinas"
+            >Reparación de cocinas</a
+          >
         </li>
         <li class="text-left">
           <a
             class="flex text-xs p-2"
             href="/services/reparacion-de-refrigeradoras"
-            >Reparación de refrigeradoras</a>
+            >Reparación de refrigeradoras</a
+          >
         </li>
         <li class="text-left">
           <a class="flex text-xs p-2" href="/services/reparacion-de-lavadoras"
-            >Reparación de lavadoras</a>
+            >Reparación de lavadoras</a
+          >
         </li>
         <li class="text-left">
-          <a class="flex text-xs p-2" href="/services/reparacion-de-camaras"
-            >Reparación de cámaras</a>
+          <a class="flex text-xs p-2" href="/services/reparacion-de-camaras-de-seguridad"
+            >Reparación de cámaras de seguridad</a
+          >
         </li>
         <li class="text-left">
           <a class="flex text-xs p-2" href="/services/reparacion-de-televisores"
-            >Reparación de televisores</a>
+            >Reparación de televisores</a
+          >
         </li>
       </ul>
     </li>
