--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -1,7 +1,17 @@
 ---
+interface Props {
+  link?: string;
+  increaseStyle?: string;
+}
 
+const { link, increaseStyle } = Astro.props;
 ---
 
-<button class="w-40 bg-primary-color-500 py-2 rounded-lg uppercase text-sm text-white">
+<a
+  href={link}
+  type="button"
+  class={`flex items-center w-max uppercase text-white bg-primary-color-400 hover:bg-primary-color-300 focus:ring-4 focus:bg-primary-color-500 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none ${increaseStyle}`}
+>
   <slot />
-</button>
+  <slot name="icon" />
+</a>
