--- a/src/components/ui/CardService.astro
+++ b/src/components/ui/CardService.astro
@@ -2,31 +2,51 @@
 import Button from "./Button.astro";
 
 interface Props {
-  image: string;
-  title: string;
-  description: string;
+  image?: string;
+  title?: string;
+  description?: string;
+  link?: string;
 }
 
-const { image, title, description } = Astro.props;
-
-const styleButton = {
-  width: "9.5em",
-  borderRadius: "0",
-  position: "absolute",
-  bottom: "0",
-  right: "0",
-  textTransform: "uppercase",
-};
+const { image, title, description, link } = Astro.props;
 ---
 
-<article class="product flex flex-col rounded-lg bg-white shadow-2xl">
-  <div class="product__img">
-    <img src={image} alt="" />
-  </div>
-  <div class="bg-white p-6">
-    <h2 class="mb-2 text-gray-950 text-xl font-medium">{title}</h2>
-    <p class="mb-8 text-gray-500">{description}</p>
-    <Button>Leer más</Button>
+<article
+  class="flex flex-col max-w-sm rounded-lg shadow-xl"
+>
+  <a href={`/services${link}`}>
+    <img class="mx-auto object-cover" src={image} alt="" />
+  </a>
+  <div class="flex flex-col p-5 flex-1">
+    <a href={`/services${link}`}>
+      <h5
+        class="mb-2 text-2xl font-bold tracking-tight text-primary-color-800"
+      >
+        {title}
+      </h5>
+    </a>
+    <p class="mb-3 font-normal text-primary-color-900">
+      {description}
+    </p>
+    <Button link={`/services${link}`} increaseStyle="mt-auto" >
+      Leer más
+      <Fragment slot="icon">
+        <svg
+          class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 14 10"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+        </svg>
+      </Fragment>
+    </Button>
   </div>
 </article>
 
