--- a/src/components/ui/Title.astro
+++ b/src/components/ui/Title.astro
@@ -1,39 +1,24 @@
 ---
 interface Props {
-	title: string
+  title?: string;
+  size?: string;
+  marginBottom?: string;
 }
 
-const { title } = Astro.props;
+const { title, size = "text-4xl", marginBottom = "mb-4" } = Astro.props;
 ---
 
-<h2 class="text-gray-950">
-	{title}
-	<span>
-		<slot />
-	</span>
+<h2
+  class={`${marginBottom} 
+  text-4xl 
+  md:text-5xl 
+  tracking-tight 
+  font-extrabold 
+  text-center 
+  text-tertiary-color-950`}
+>
+  {title}
+  <span>
+    <slot />
+  </span>
 </h2>
-
-<style lang="scss">
-  h2 {
-    color: #fff;
-    font-size: 2rem;
-    text-align: center;
-	font-weight: 500;
-    line-height: 0.85;
-    margin-bottom: 3rem;
-    text-transform: uppercase;
-
-		@media (max-width: 576px) {
-			font-size: 2em;
-		}
-
-		@media (max-width: 375px) {
-			font-size: 1.5em;
-		}
-
-		span {
-			font-size: 1.5em;
-			display: block;
-		}
-	}
-</style>
