--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -5,7 +5,7 @@ import NavBar from "../components/home/NavBar.astro";
 import NavBarMovil from "../components/home/NavBarMovil.astro";
 ---
 
-<header class="relative h-20 flex justify-between items-center px-6 shadow-lg">
+<header class="relative h-20 flex justify-between items-center px-6 shadow-xl">
   <figure class="w-44">
     <img src="/logo-air-servitec.png" alt="" />
   </figure>
