--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
 <html lang="es">
   <BaseHead title={title} description="Servitec - Reparación línea blanca" />
   <body>
-    <div class="w-full max-w-7xl mx-auto overflow-hidden">
+    <div class="w-full max-w-full mx-auto overflow-hidden">
       <Header />
       <div>
         <slot />
