--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,9 +1,10 @@
 ---
 import { Icon } from "astro-icon";
 const h3 = ["mb-4 font-semibold relative w-max uppercase"];
+import "@fontsource-variable/nunito";
 ---
 
-<footer
+<!-- <footer
   class="bg-gradient-to-b from-secondary-color-950 to-secondary-color-800 text-white"
 >
   <section class="py-10 px-6">
@@ -77,9 +78,157 @@ const h3 = ["mb-4 font-semibold relative w-max uppercase"];
       >
     </p>
   </div>
+</footer> -->
+<footer class="bg-white dark:bg-gray-900 font-sans font-light">
+  <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+    <div class="grid grid-cols-1 gap-8 md:grid-cols-2 xl:grid-cols-4 mb-10">
+      <div class="">
+        <a href="https://flowbite.com/" class="flex items-center mb-6">
+          <img
+            src="/logo-air-servitec.png"
+            class="h-14 me-3"
+            alt="FlowBite Logo"
+          />
+        </a>
+        <p class="w-full text-sm text-pretty text-gray-400">
+          Bienvenido a Servitec Reparación Línea Blanca, tu socio confiable en
+          soluciones de servicio técnico para electrodomésticos. Fundada con
+          dedicación y experiencia, nuestra empresa se especializa en la
+          reparación de una amplia gama de electrodomésticos de línea blanca.
+        </p>
+      </div>
+      <div class="">
+        <h2 class="text-base font-bold text-black uppercase">
+          Servicios
+        </h2>
+        <hr class="mt-2 mb-4 border-gray-100 sm:mx-auto" />
+        <ul class="flex flex-col flex-wrap text-gray-400 text-sm">
+          <li class="mb-4">
+            <a href="https://flowbite.com/" class="hover:underline"
+              >Reparación de Licuadoras</a
+            >
+          </li>
+          <li class="mb-4">
+            <a href="https://tailwindcss.com/" class="hover:underline"
+              >Reparación de Refrigeradoras</a
+            >
+          </li>
+          <li class="mb-4">
+            <a href="https://tailwindcss.com/" class="hover:underline"
+              >Reparación de Lavadoras</a
+            >
+          </li>
+          <li class="mb-4">
+            <a href="https://tailwindcss.com/" class="hover:underline"
+              >Reparación de Visicooler</a
+            >
+          </li>
+          <li>
+            <a href="https://tailwindcss.com/" class="hover:underline"
+              >Reparación de Televisores</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="">
+        <h2 class="text-base font-bold text-black uppercase">Blog</h2>
+        <hr class="mt-2 mb-4 border-gray-100 sm:mx-auto" />
+        <ul class="text-gray-400 text-sm">
+          <li class="mb-4">
+            <a
+              href="https://github.com/themesberg/flowbite"
+              class="hover:underline"
+              >Cómo Extender la Vida Útil de tu Refrigerador</a
+            >
+          </li>
+          <li class="mb-4">
+            <a href="https://discord.gg/4eeurUVvTy" class="hover:underline"
+              >Consejos para un Funcionamiento Eficiente de tu Lavadora</a
+            >
+          </li>
+          <li>
+            <a href="https://discord.gg/4eeurUVvTy" class="hover:underline"
+              >Secretos para un Horno en Perfecto Estado</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="">
+        <h2 class="text-base font-bold text-black uppercase">
+          Contáctanos
+        </h2>
+        <hr class="mt-2 mb-4 border-gray-100 sm:mx-auto" />
+        <ul class="text-gray-400 text-sm">
+          <li class="mb-4 flex">
+            <div class="mr-2">
+              <Icon name="mdi:address-marker-outline" size={24} class="text-primary-color-500" />
+            </div>
+            <p class="text-pretty">
+              <span class="font-extrabold text-primary-color-500">Dirección:</span>
+              <span class=""
+                >Calle Nestor Bermudez N° 113, Chorrillos - Lima</span
+              >
+            </p>
+          </li>
+          <li class="mb-4 flex">
+            <div class="mr-2">
+              <Icon name="mdi:cellphone" size={24} class="text-primary-color-500" />
+            </div>
+            <p class="text-pretty">
+              <span class="font-extrabold text-primary-color-500">Teléfono:</span>
+              <span class="">941 801 827</span>
+            </p>
+          </li>
+          <li class="mb-4 flex">
+            <div class="mr-2">
+              <Icon name="fontisto:email" size={24} class="text-primary-color-500" />
+            </div>
+            <p class="text-pretty">
+              <span class="font-extrabold text-primary-color-500">Correo Eléctronico:</span>
+              <span class="">contacto@servitecperu.com</span>
+            </p>
+          </li>
+          <li class="flex">
+            <div class="mr-2">
+              <Icon name="mdi:clock-outline" size={24} class="text-primary-color-500" />
+            </div>
+            <p class="text-pretty">
+              <span class="font-extrabold text-primary-color-500">Horario de atención:</span>
+              <span class="">Lunes a Sábado: 9:00 am a 18:00 pm</span>
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="lg:flex lg:items-center lg:justify-between text-center">
+      <span class="text-sm text-gray-400"
+        >Copyrights © 2024 Servitec Linea Blanca - Todos los derechos
+        reservados - Desarrollado por <a
+          href="https://flowbite.com/"
+          class="font-bold hover:underline">Agencia Servitec</a
+        >
+      </span>
+      <div class="flex gap-2 mt-4 justify-center lg:mt-0">
+        <a
+          href="#"
+          class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
+        >
+        <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16"><path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131c.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/></svg>
+          <span class="sr-only">Facebook page</span>
+        </a>
+        <a
+          href="#"
+          class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
+        >
+        <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16"><path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144l-2.494.654l.666-2.433l-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931a6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646c-.182-.065-.315-.099-.445.099c-.133.197-.513.646-.627.775c-.114.133-.232.148-.43.05c-.197-.1-.836-.308-1.592-.985c-.59-.525-.985-1.175-1.103-1.372c-.114-.198-.011-.304.088-.403c.087-.088.197-.232.296-.346c.1-.114.133-.198.198-.33c.065-.134.034-.248-.015-.347c-.05-.099-.445-1.076-.612-1.47c-.16-.389-.323-.335-.445-.34c-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992c.47.205.84.326 1.129.418c.475.152.904.129 1.246.08c.38-.058 1.171-.48 1.338-.943c.164-.464.164-.86.114-.943c-.049-.084-.182-.133-.38-.232"/></svg>
+          <span class="sr-only">WhatsApp</span>
+        </a>
+      </div>
+    </div>
+  </div>
 </footer>
 
-<style type="scss">
+<!-- <style type="scss">
   h3::after {
     content: "";
     position: absolute;
@@ -89,4 +238,4 @@ const h3 = ["mb-4 font-semibold relative w-max uppercase"];
     left: 0;
     bottom: -2.5px;
   }
-</style>
+</style> -->
