--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -59,5 +59,6 @@ import { ViewTransitions } from "astro:transitions";
   <meta name="twitter:site" content="@AirServitec" />
   <meta name="twitter:creator" content="@ServitecPerú" />
 
+  <link href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.6/keen-slider.min.css" rel="stylesheet" />
   <ViewTransitions />
 </head>
